--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 git+https://github.com/Rapptz/discord.py.git
-
 gspread
+oauth2client
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
